@@ -1,3 +1,8 @@
+Sun May 15 14:35:46 2005  Tanaka Akira  <akr@m17n.org>
+
+	* lib/pathname.rb (Pathname#unlink): unlink a symlink to a directory
+	  was failed.  [ruby-core:4992]
+
 Sun May 15 09:57:30 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/win32.c (unixtime_to_filetime): deal with DST.
